# gclient2nix

./: .gitignore  flake.nix  pyproject.toml
nix/: package.nix
src/gclient2nix/: __init__.py  gclient2nix.py  transform_sources.py
src/gclient2nix/repository/: __init__.py  git.py  github.py  gitiles.py  javascript.py  utils.py
